# .dotfiles

./: .gitignore  .tmux.conf  LICENSE  README.md
.github/workflows/: wallpaperv-helper.yml
Jlearn/: Jlearn.pro  README.md  main.cpp
Pictures/: --modulate
cava/: config.bak
hypr/: colors.conf  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  hyprpaper.conf.bak
hypr/conf/: animation.lua  autostart.lua  colors.lua  decoration.lua  device.lua  dvd.lua  env.lua  general.lua  gestures.lua  keybinds.lua  layerrules.lua  layout.lua  misc.lua  (+6 more)
hypr/conf.d/: \  animation.conf  autostart.conf  decoration.conf  device.conf  env.conf  general.conf  gestures.conf  input.conf  keybinds.conf  layout.conf  misc.conf  monitor.conf  windowrules.conf  workspace.conf
kitty/: kitty.conf  kitty.conf.bak
mako/: config
mako.bak/: README.md  config
matugen/: config.toml
nvim/: lazy-lock.json
powerski/: main.cpp  powerski.pro
quickshell/: ;w  Bar.qml  Battery.qml  Workspace.qml  count.md  quickshell.bak  shell.qml
swifty/: CMakeLists.txt  README.md  Swifty.pro  main.cpp
swifty.bak/: README.md
swifty/modules/: swifty.cpp
swifty/modules/clickablelabel/: cilickablelabel.cpp  cilickablelabel.h  clickablelabel.cpp  clickablelabel.h
swifty/modules/headers/: clickablelabel.h  swifty.h
swifty/modules/kineticscrollarea/: kineticscrollarea.cpp  kineticscrollarea.h
swifty/modules/swifty/: swifty.cpp  swifty.h
ttyper/: config.toml
waybar/: config.jsonc  modules.json  modules.json.bak  style.css  waybar
waybar.bak/: README.md  style.css
(+296 files in other folders)
